# Enaga

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REFACTORING.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Host/: CMakeLists.txt
Host/Source/: Main.cpp  main.cpp
Plugin/: CMakeLists.txt
Plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  plugin_editor.cpp  plugin_editor.h  plugin_entry.cpp  plugin_processor.cpp  plugin_processor.h
Plugin/Source/audio/: LfoEngine.cpp  LfoEngine.h  LfoMode.h  NoiseAudioSource.cpp  NoiseType.h  lfo_engine.cpp  lfo_engine.h  lfo_mode.h  noise_audio_source.cpp  noise_audio_source.h  noise_type.h
Plugin/Source/audio/generators/: BrownNoiseGenerator.cpp  BrownNoiseGenerator.h  GreyNoiseGenerator.cpp  GreyNoiseGenerator.h  PinkNoiseGenerator.cpp  brown_noise_generator.cpp  brown_noise_generator.h  grey_noise_generator.cpp  grey_noise_generator.h  noise_generator.h  pink_noise_generator.cpp  pink_noise_generator.h  white_noise_generator.cpp  white_noise_generator.h
Plugin/Source/platform/: IOSVolumeView.mm  ios_volume_view.h  ios_volume_view.mm
Plugin/Source/ui/: EnagaLookAndFeel.cpp  LfoComponent.cpp  LfoComponent.h  MainComponent.h  PlayButton.cpp  PlayButton.h  enaga_look_and_feel.cpp  enaga_look_and_feel.h  lfo_component.cpp  lfo_component.h  main_component.cpp  main_component.h  play_button.cpp  play_button.h
Source/: EnagaLookAndFeel.h  GreyNoiseGenerator.h  LfoComponent.h  LfoEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  NoiseAudioSource.cpp  NoiseAudioSource.h  NoiseGenerator.h  PinkNoiseGenerator.h  PlayButton.h  WhiteNoiseAudioSource.cpp  WhiteNoiseAudioSource.h  WhiteNoiseGenerator.h
Source/Audio/: BrownNoiseGenerator.h  LfoEngine.h  NoiseAudioSource.h
Source/UI/: EnagaLookAndFeel.h  LfoComponent.h  MainComponent.cpp  iOSVolumeView.h
Source/audio/: NoiseAudioSource.h
Source/audio/generators/: PinkNoiseGenerator.h  WhiteNoiseGenerator.cpp  WhiteNoiseGenerator.h
Source/platform/: IOSVolumeView.h  iOSVolumeView.mm
Source/ui/: EnagaLookAndFeel.cpp  EnagaLookAndFeel.h  LfoComponent.h  MainComponent.cpp  MainComponent.h  PlayButton.cpp  PlayButton.h
_codeql_build_dir/: Makefile
_codeql_build_dir/Enaga_artefacts/JuceLibraryCode/: Info.txt
_codeql_build_dir/Enaga_artefacts/JuceLibraryCode/Release/: Defs.txt
logos/: README.md
tests/: CMakeLists.txt  SmokeTest.cpp  smoke_test.cpp
